# Skystore

./: .gitignore  add_prod__fixture.json  catalog_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  article_update.html  home.html
blog/templates/blog/includes/: menu.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contacts.py
catalog/templates/catalog/: base.html  contacts.html  contacts_list.html  prod_detail.html  product_confirm_delete.html  product_detail.html  product_list.html  products_list.html
catalog/templates/catalog/includes/: menu.html
config/: settings.py  urls.py
